Use *_log_options instead of access_log_format per #174.
access_log_options and error_log_options allow for custom log options
while retaining the existing log name scheme. They can be combined with
either a custom log name (access_log / error_log) or without custom log
names.

--- a/templates/vhost/vhost_ssl_header.erb
+++ b/templates/vhost/vhost_ssl_header.erb
@@ -28,8 +28,8 @@ server {
   <%= key %> <%= value %>;
 <% end -%><% end -%>
 
-  access_log            <%= @ssl_access_log %>;
-  error_log             <%= @ssl_error_log %>;
+  access_log <%= @ssl_access_log %> <%= @access_log_options %>;
+  error_log <%= @ssl_error_log %> <%= @error_log_options %>;
 
 <% if @root -%>
   root <%= @root %>;
