--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -32,6 +32,6 @@ server {
   }
 <% end -%>
 
-  access_log            <%= @access_log_real %>;
-  error_log             <%= @error_log_real %>;
+  access_log            <%= @access_log_real %> <%= @access_log_options %>;
+  error_log             <%= @error_log_real %> <%= @error_log_options %>;
 
