Add custom log_format to #174.
Allows for a log_format config line to be generated for use in either
the $access_log or $access_log_options parameters. Only one log_format
per vhost.

--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -31,7 +31,10 @@ server {
        return 301 https://$host$request_uri;
   }
 <% end -%>
+<% if @log_format -%>
+  log_format <%= @log_format['name'] %> '<%= @log_format['format'] %>';
 
+<% end -%>
   access_log            <%= @access_log_real %> <%= @access_log_options %>;
   error_log             <%= @error_log_real %> <%= @error_log_options %>;
 
