--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -17,7 +17,7 @@ http {
   
   log_format  vcommon '$host:$server_port $remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent"';
+                      '"$http_user_agent" $request_time';
 
   access_log  <%= scope.lookupvar('nginx::params::nx_logdir')%>/access.log vcommon;
 
