--- a/templates/vhost/vhost_location_directory.erb
+++ b/templates/vhost/vhost_location_directory.erb
@@ -17,10 +17,10 @@
 <% if @index_files -%>
     index <% @index_files.each do |i| %> <%= i %><% end %>;
 <% end -%>
-<% if defined? auth_basic -%>
+<% if defined? @auth_basic -%>
     auth_basic           "<%= @auth_basic %>";
 <% end -%>
-<% if defined? auth_basic_user_file -%>
+<% if defined? @auth_basic_user_file -%>
     auth_basic_user_file <%= @auth_basic_user_file %>;
 <% end -%>
 <% if @location_cfg_append -%><% @location_cfg_append.sort_by {|k,v| k}.each do |key,value| -%>
