--- a/templates/vhost/vhost_location_proxy.erb
+++ b/templates/vhost/vhost_location_proxy.erb
@@ -8,10 +8,10 @@
 <% end -%>
     proxy_pass          <%= @proxy %>;
     proxy_read_timeout  <%= @proxy_read_timeout %>;
-<% if not @proxy_method.nil? -%>
+<% if @proxy_method -%>
     proxy_method        <%= @proxy_method %>;
 <% end -%>
-<% if not @proxy_set_body.nil? -%>
+<% if @proxy_set_body -%>
     proxy_set_body      <%= @proxy_set_body %>;
 <% end -%>
 <% if @location_cfg_append -%><% @location_cfg_append.sort_by {|k,v| k}.each do |key,value| -%>
