switch vhost resource to concat pattern
Also uses sites-available/enabled pattern for config files

--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -44,6 +44,7 @@ http {
 <% end -%>
 
   include /etc/nginx/conf.d/*.conf;
+  include <%= scope.lookupvar('nginx::params::nx_conf_dir') %>/sites-enabled/*;
 
 }
 <% if scope.lookupvar('nginx::mail') %>
