Feature: Added HSTS header support into ssl vhost.
In nginx::vhost I have added $header_hsts. This option, when defined
will set "add_header Strict-Transport-Security "${header_hsts}";".

There is also some trailing whitespace that I have cleaned up.

--- a/templates/vhost/vhost_ssl_header.erb
+++ b/templates/vhost/vhost_ssl_header.erb
@@ -20,6 +20,9 @@ server {
 <% if defined? @auth_basic_user_file -%>
   auth_basic_user_file      "<%= @auth_basic_user_file %>";
 <% end -%>
+<% if defined? @header_hsts -%>
+  add_header Strict-Transport-Security "<%= @header_hsts %>";
+<% end -%>
 
   access_log            <%= @ssl_access_log %>;
   error_log             <%= @ssl_error_log %>;
