Add nginx::vhost option 'autoindex'
Signed-off-by: Markus Rekkenbeil <markus@bionix-it.de>

--- a/templates/vhost/vhost_location_directory.erb
+++ b/templates/vhost/vhost_location_directory.erb
@@ -14,6 +14,7 @@
 <% if @try_files -%>
     try_files<% @try_files.each do |try| -%> <%= try %><% end -%>;
 <% end -%>
+<% if @autoindex == 'on' -%>autoindex on;<% end -%>
 <% if @index_files -%>
     index <% @index_files.each do |i| %> <%= i %><% end %>;
 <% end -%>
