--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -17,8 +17,8 @@ server {
 <% if @vhost_cfg_prepend -%><% @vhost_cfg_prepend.sort_by{ |k, v| k.to_s == 'allow' ? '' : k.to_s }.each do |key,value| -%>
   <%= key %> <%= value %>;
 <% end -%><% end -%>
-<% if @root -%>
-  root <%= @root %>;
+<% if @www_root -%>
+  root <%= @www_root %>;
 <% end -%>
 <% if @passenger_cgi_param -%><% @passenger_cgi_param.each do |key,value| -%>
   passenger_set_cgi_param  <%= key %> <%= value %>;
