--- a/templates/vhost/vhost_ssl_header.erb
+++ b/templates/vhost/vhost_ssl_header.erb
@@ -24,8 +24,8 @@ server {
   access_log            <%= @ssl_access_log %>;
   error_log             <%= @ssl_error_log %>;
 
-<% if @root -%>
-  root <%= @root %>;
+<% if @www_root -%>
+  root <%= @www_root %>;
 <% end -%>
 <% if @passenger_cgi_param -%><% @passenger_cgi_param.each do |key,value| -%>
   passenger_set_cgi_param  <%= key %> <%= value %>;
