--- a/templates/vhost/vhost_ssl_header.erb
+++ b/templates/vhost/vhost_ssl_header.erb
@@ -20,7 +20,7 @@ server {
 <% if defined? @auth_basic_user_file -%>
   auth_basic_user_file      "<%= @auth_basic_user_file %>";
 <% end -%>
-<% if @index_files -%>
+<% if @index_files.count > 0 -%>
     index <% Array(index_files).each do |i| %> <%= i %><% end %>;
 <% end -%>
 
