--- a/templates/vhost/vhost_location_directory.erb
+++ b/templates/vhost/vhost_location_directory.erb
@@ -17,7 +17,7 @@
 <% if @autoindex == 'on' -%>
     autoindex on;
 <% end -%>
-<% if @index_files -%>
+<% if @index_files.count > 0 -%>
     index <% Array(index_files).each do |i| %> <%= i %><% end %>;
 <% end -%>
 <% if defined? @auth_basic -%>
