--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -30,7 +30,7 @@ http {
   keepalive_timeout  <%= scope.lookupvar('nginx::params::nx_keepalive_timeout')%>;
   tcp_nodelay        <%= scope.lookupvar('nginx::params::nx_tcp_nodelay')%>;
 
-<% if scope.lookupvar('nginx::params::nx_gzip') == 'on' %>
+<% if @gzip == 'on' %>
   gzip         on;
   gzip_disable "MSIE [1-6]\.(?!.*SV1)";
 <% end -%>
