--- a/templates/vhost/vhost_location_empty.erb
+++ b/templates/vhost/vhost_location_empty.erb
@@ -1,6 +1,10 @@
   location <%= @location %> {
 <% if @location_custom_cfg -%><% @location_custom_cfg.sort_by {|k,v| k}.each do |key,value| -%>
+<% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
+    <%= key %> <%= subkey %> <%= subvalue %>;
+<% end -%><% else -%>
     <%= key %> <%= value %>;
+<% end -%>
 <% end -%><% end -%>
   }
 
