--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -14,6 +14,9 @@ server {
 <% if defined? @client_max_body_size -%>
   client_max_body_size <%= @client_max_body_size %>;
 <% end -%>
+<% @conditions.each do |condition| -%>
+  <%= condition %>
+<% end -%>
 <%# make sure that allow comes before deny by forcing the allow key (if it -%>
 <%# exists) to be first in the output order.  The hash keys also need to be -%>
 <%# sorted so that the ordering is stable. -%>
