--- a/templates/vhost/vhost_ssl_footer.erb
+++ b/templates/vhost/vhost_ssl_footer.erb
@@ -2,13 +2,15 @@
 include <%= file %>;
 <% end -%><% end -%>
 <% if @vhost_cfg_append -%><% @vhost_cfg_append.sort_by{ |k, v| k.to_s == 'allow' ? '' : k.to_s }.each do |key,value| -%>
-  <%= key %> <%= value %>;
-<% end -%>
-<% end -%>
+<% Array(value).each do |sub| -%>
+  <%= key %> <%= sub %>;
+<% end %>
+<% end -%><% end -%>
 <% if @vhost_cfg_ssl_append -%><% @vhost_cfg_ssl_append.sort_by{ |k, v| k.to_s == 'allow' ? '' : k.to_s }.each do |key,value| -%>
-  <%= key %> <%= value %>;
-<% end -%>
-<% end -%>
+<% Array(value).each do |sub| -%>
+  <%= key %> <%= sub %>;
+<% end %>
+<% end -%><% end -%>
 }
 <% if @rewrite_www_to_non_www -%>
 server {
