--- a/templates/vhost/vhost_footer.erb
+++ b/templates/vhost/vhost_footer.erb
@@ -5,10 +5,10 @@ include <%= file %>;
 <%# exists) to be first in the output order.  The hash keys also need to be -%>
 <%# sorted so that the ordering is stable. -%>
 <% if @vhost_cfg_append -%><% @vhost_cfg_append.sort_by{ |k, v| k.to_s == 'allow' ? '' : k.to_s }.each do |key,value| -%>
-  <%= key %> <%= value %>;
-<% end -%>
-<% end -%>
-}
+<% Array(value).each do |sub| -%>
+  <%= key %> <%= sub %>;
+<% end %>
+<% end -%><% end -%>
 <% if @rewrite_www_to_non_www -%>
 server {
   listen                <%= @listen_ip %>:<%= @listen_port %>;
