--- a/templates/vhost/vhost_location_directory.erb
+++ b/templates/vhost/vhost_location_directory.erb
@@ -9,7 +9,9 @@
     <%= value %>
 <% end -%><% end -%>
 <% if @location_cfg_prepend -%><% @location_cfg_prepend.sort_by {|k,v| k}.each do |key,value| -%>
-    <%= key %> <%= value %>;
+<% Array(value).each do |sub| -%>
+    <%= key %> <%= sub %>;
+<% end %>
 <% end -%><% end -%>
 <% if defined? @www_root -%>
     root  <%= @www_root %>;
@@ -33,7 +35,9 @@
     auth_basic_user_file <%= @auth_basic_user_file %>;
 <% end -%>
 <% if @location_cfg_append -%><% @location_cfg_append.sort_by {|k,v| k}.each do |key,value| -%>
-    <%= key %> <%= value %>;
+<% Array(value).each do |sub| -%>
+    <%= key %> <%= sub %>;
+<% end %>
 <% end -%><% end -%>
 <% if @location_custom_cfg_append -%><% @location_custom_cfg_append.each do |value| -%>
     <%= value %>
