--- a/templates/vhost/vhost_location_empty.erb
+++ b/templates/vhost/vhost_location_empty.erb
@@ -1,6 +1,8 @@
   location <%= @location %> {
 <% if @location_custom_cfg -%><% @location_custom_cfg.sort_by {|k,v| k}.each do |key,value| -%>
-    <%= key %> <%= value %>;
+<% Array(value).each do |sub| -%>
+    <%= key %> <%= sub %>;
+<% end %>
 <% end -%><% end -%>
   }
 
