--- a/templates/vhost/vhost_location_stub_status.erb
+++ b/templates/vhost/vhost_location_stub_status.erb
@@ -1,10 +1,14 @@
   location <%= @location %> {
 <% if @location_cfg_prepend -%><% @location_cfg_prepend.sort_by {|k,v| k}.each do |key,value| -%>
-    <%= key %>  <%= value %>;
+<% Array(value).each do |sub| -%>
+    <%= key %>  <%= sub %>;
+<% end %>
 <% end -%><% end -%>
     stub_status on;
 <% if @location_cfg_append -%><% @location_cfg_append.sort_by {|k,v| k}.each do |key,value| -%>
-    <%= key %>  <%= value %>;
+<% Array(value).each do |sub| -%>
+    <%= key %>  <%= sub %>;
+<% end %>
 <% end -%><% end -%>
   }
 
