--- a/templates/vhost/vhost_ssl_header.erb
+++ b/templates/vhost/vhost_ssl_header.erb
@@ -49,10 +49,14 @@ server {
   error_log             <%= @ssl_error_log %>;
   
 <% if @vhost_cfg_prepend -%><% @vhost_cfg_prepend.sort_by{ |k, v| k.to_s == 'allow' ? '' : k.to_s }.each do |key,value| -%>
-  <%= key %> <%= value %>;
+<% Array(value).each do |sub| -%>
+  <%= key %> <%= sub %>;
+<% end %>
 <% end -%><% end -%>
 <% if @vhost_cfg_ssl_prepend -%><% @vhost_cfg_ssl_prepend.sort_by{ |k, v| k.to_s == 'allow' ? '' : k.to_s }.each do |key,value| -%>
-  <%= key %> <%= value %>;
+<% Array(value).each do |sub| -%>
+  <%= key %> <%= sub %>;
+<% end %>
 <% end -%><% end -%>
 <% if @root -%>
   root <%= @root %>;
