--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -1,13 +1,14 @@
-user <%= scope.lookupvar('nginx::config::nx_daemon_user') %>;
+user <%= @daemon_user %>;
 worker_processes <%= @worker_processes %>;
+<% if @worker_rlimit_nofile %>worker_rlimit_nofile <%= @worker_rlimit_nofile %>;<% end -%>
 
 error_log  <%= @nginx_error_log %>;
-pid        <%= scope.lookupvar('nginx::params::nx_pid')%>;
+pid        <%= @pid %>;
 
 events {
   worker_connections <%= @worker_connections -%>;
-<% if scope.lookupvar('nginx::params::nx_multi_accept') == 'on' %>multi_accept on;<% end -%>
-<% if scope.lookupvar('nginx::params::nx_events_use') %>use <%= scope.lookupvar('nginx::params::nx_events_use')%>;<% end -%>
+<% if @multi_accept == 'on' %>multi_accept on;<% end -%>
+<% if @events_use %>use <%= @events_use %>;<% end -%>
 }
 
 http {
@@ -16,19 +17,19 @@ http {
 
   access_log  <%= @http_access_log %>;
 
-  sendfile    <%= scope.lookupvar('nginx::params::nx_sendfile')%>;
+  sendfile    <%= @sendfile %>;
 
   server_tokens <%= @server_tokens %>;
-  <% if scope.lookupvar('nginx::params::nx_tcp_nopush') == 'on' %>tcp_nopush on;<% end %>
+  <% if @http_tcp_nopush == 'on' %>tcp_nopush on;<% end %>
 
-  types_hash_max_size <%= scope.lookupvar('nginx::params::nx_types_hash_max_size')%>;
-  types_hash_bucket_size <%= scope.lookupvar('nginx::params::nx_types_hash_bucket_size')%>;
+  types_hash_max_size <%= @types_hash_max_size %>;
+  types_hash_bucket_size <%= @types_hash_bucket_size %>;
 
   server_names_hash_bucket_size <%= @names_hash_bucket_size %>;
   server_names_hash_max_size <%= @names_hash_max_size %>;
 
-  keepalive_timeout  <%= scope.lookupvar('nginx::params::nx_keepalive_timeout')%>;
-  tcp_nodelay        <%= scope.lookupvar('nginx::params::nx_tcp_nodelay')%>;
+  keepalive_timeout  <%= @keepalive_timeout %>;
+  tcp_nodelay        <%= @http_tcp_nodelay %>;
 
 <% if @gzip == 'on' %>
   gzip         on;
@@ -45,10 +46,10 @@ http {
 <% end -%>
 
   include /etc/nginx/conf.d/*.conf;
-  include <%= scope.lookupvar('nginx::params::nx_conf_dir') %>/sites-enabled/*;
+  include <%= @conf_dir %>/sites-enabled/*;
 
 }
-<% if scope.lookupvar('nginx::mail') %>
+<% if @mail %>
 mail {
   include /etc/nginx/conf.mail.d/*.conf;
 }
