--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -2,10 +2,12 @@
 user <%= @daemon_user %>;
 <% end -%>
 worker_processes <%= @worker_processes %>;
-worker_rlimit_nofile <%= @worker_rlimit_nofile %>;
+<% if @worker_rlimit_nofile %>worker_rlimit_nofile <%= @worker_rlimit_nofile %>;<% end -%>
 
 error_log  <%= @nginx_error_log %>;
-<% if scope.lookupvar('nginx::params::nx_pid') != false %>pid        <%= scope.lookupvar('nginx::params::nx_pid')%>;<% end -%>
+<% if @pid -%>
+pid        <%= @pid %>;
+<% end -%>
 
 events {
   worker_connections <%= @worker_connections -%>;
@@ -23,20 +25,25 @@ http {
 
   access_log  <%= @http_access_log %>;
 
-  sendfile    <%= @sendfile %>;
+<% if @sendfile == 'on' -%>
+  sendfile    on;
+<% if @http_tcp_nopush == 'on' -%>
+  tcp_nopush on;
+<% end -%>
+<% end -%>
 
   server_tokens <%= @server_tokens %>;
 
-  types_hash_max_size <%= scope.lookupvar('nginx::params::nx_types_hash_max_size')%>;
-  types_hash_bucket_size <%= scope.lookupvar('nginx::params::nx_types_hash_bucket_size')%>;
+  types_hash_max_size <%= @types_hash_max_size %>;
+  types_hash_bucket_size <%= @types_hash_bucket_size %>;
 
   server_names_hash_bucket_size <%= @names_hash_bucket_size %>;
   server_names_hash_max_size <%= @names_hash_max_size %>;
 
-  keepalive_timeout  <%= scope.lookupvar('nginx::params::nx_keepalive_timeout')%>;
-  tcp_nodelay        <%= scope.lookupvar('nginx::params::nx_tcp_nodelay')%>;
+  keepalive_timeout  <%= @keepalive_timeout %>;
+  tcp_nodelay        <%= @http_tcp_nodelay %>;
 
-<% if @gzip == 'on' %>
+<% if @gzip == 'on' -%>
   gzip         on;
   gzip_disable "MSIE [1-6]\.(?!.*SV1)";
 <% end -%>
@@ -64,7 +71,7 @@ http {
   include <%= @conf_dir %>/sites-enabled/*;
 
 }
-<% if scope.lookupvar('nginx::mail') %>
+<% if @mail -%>
 mail {
   include <%= @conf_dir %>/conf.mail.d/*.conf;
 }
