--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -18,9 +18,16 @@ server {
 <%# exists) to be first in the output order.  The hash keys also need to be -%>
 <%# sorted so that the ordering is stable. -%>
 <% if @vhost_cfg_prepend -%><% @vhost_cfg_prepend.sort_by{ |k, v| k.to_s == 'allow' ? '' : k.to_s }.each do |key,value| -%>
+<% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
+<% Array(subkey).each do |asubkey| -%>
+<% Array(subvalue).each do |asubvalue| -%>
+  <%= key %> <%= asubkey %> <%= asubvalue %>;
+<% end %>
+<% end -%><% else -%>
 <% Array(value).each do |sub| -%>
   <%= key %> <%= sub %>;
 <% end %>
+<% end -%>
 <% end -%><% end -%>
 <% if @root -%>
   root <%= @root %>;
