--- a/templates/vhost/vhost_location_directory.erb
+++ b/templates/vhost/vhost_location_directory.erb
@@ -5,12 +5,8 @@
 <% if @location_deny -%><% @location_deny.each do |deny_rule| -%>
   deny <%= deny_rule %>;
 <% end -%><% end -%>
-<% if @location_custom_cfg_prepend -%><% @location_custom_cfg_prepend.each do |key,value| -%>
-<% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
-    <%= key %> <%= subkey %> <%= subvalue %>;
-<% end -%><% else -%>
-    <%= key %> <%= value %>;
-<% end -%>
+<% if @location_custom_cfg_prepend -%><% @location_custom_cfg_prepend.each do |value| -%>
+    <%= value %>;
 <% end -%><% end -%>
 <% if @location_cfg_prepend -%><% @location_cfg_prepend.sort_by {|k,v| k}.each do |key,value| -%>
 <% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
@@ -58,18 +54,7 @@
 <% end %>
 <% end -%>
 <% end -%><% end -%>
-<% if @location_custom_cfg_append -%><% @location_custom_cfg_append.each do |key,value| -%>
-<% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
-<% Array(subkey).each do |asubkey| -%>
-<% Array(subvalue).each do |asubvalue| -%>
-    <%= key %> <%= asubkey %> <%= asubvalue %>;
-<% end %>
-<% end %>
-<% end -%><% else -%>
-<% Array(value).each do |sub| -%>
-    <%= key %> <%= sub %>;
-<% end %>
-<% end -%>
+<% if @location_custom_cfg_append -%><% @location_custom_cfg_append.each do |value| -%>
+    <%= value %>;
 <% end -%><% end -%>
-
   }
