--- a/templates/vhost/vhost_location_fastcgi.erb
+++ b/templates/vhost/vhost_location_fastcgi.erb
@@ -1,4 +1,7 @@
   location <%= @location %> {
+<% if @location_custom_cfg_prepend -%><% @location_custom_cfg_prepend.each do |value| -%>
+    <%= value %>;
+<% end -%><% end -%>
 <% if @location_cfg_prepend -%><% @location_cfg_prepend.sort_by {|k,v| k}.each do |key,value| -%>
 <% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
 <% Array(subkey).each do |asubkey| -%>
@@ -38,6 +41,9 @@
     <%= key %> <%= sub %>;
 <% end %>
 <% end -%>
+<% end -%><% end -%>
+<% if @location_custom_cfg_append -%><% @location_custom_cfg_append.each do |value| -%>
+    <%= value %>;
 <% end -%><% end -%>
 
   }
