--- a/templates/vhost/vhost_location_stub_status.erb
+++ b/templates/vhost/vhost_location_stub_status.erb
@@ -1,4 +1,7 @@
   location <%= @location %> {
+<% if @location_custom_cfg_prepend -%><% @location_custom_cfg_prepend.each do |value| -%>
+    <%= value %>;
+<% end -%><% end -%>
 <% if @location_cfg_prepend -%><% @location_cfg_prepend.sort_by {|k,v| k}.each do |key,value| -%>
 <% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
 <% Array(subkey).each do |asubkey| -%>
@@ -26,5 +29,9 @@
 <% end %>
 <% end -%>
 <% end -%><% end -%>
+<% if @location_custom_cfg_append -%><% @location_custom_cfg_append.each do |value| -%>
+    <%= value %>;
+<% end -%><% end -%>
+
   }
 
