--- a/templates/vhost/vhost_location_fastcgi.erb
+++ b/templates/vhost/vhost_location_fastcgi.erb
@@ -1,6 +1,6 @@
   location <%= @location %> {
 <% if @location_custom_cfg_prepend -%><% @location_custom_cfg_prepend.each do |value| -%>
-    <%= value %>;
+    <%= value %>
 <% end -%><% end -%>
 <% if @location_cfg_prepend -%><% @location_cfg_prepend.sort_by {|k,v| k}.each do |key,value| -%>
 <% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
@@ -43,7 +43,7 @@
 <% end -%>
 <% end -%><% end -%>
 <% if @location_custom_cfg_append -%><% @location_custom_cfg_append.each do |value| -%>
-    <%= value %>;
+    <%= value %>
 <% end -%><% end -%>
 
   }
