Fix syntax errors

--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -23,6 +23,7 @@ server {
 <% Array(subvalue).each do |asubvalue| -%>
   <%= key %> <%= asubkey %> <%= asubvalue %>;
 <% end %>
+<% end %>
 <% end -%><% else -%>
 <% Array(value).each do |sub| -%>
   <%= key %> <%= sub %>;
