--- a/templates/vhost/vhost_location_alias.erb
+++ b/templates/vhost/vhost_location_alias.erb
@@ -8,6 +8,7 @@
 <% Array(subvalue).each do |asubvalue| -%>
     <%= key %> <%= asubkey %> <%= asubvalue %>;
 <% end %>
+<% end %>
 <% end -%><% else -%>
 <% Array(value).each do |sub| -%>
     <%= key %> <%= sub %>;
