--- a/templates/vhost/vhost_location_directory.erb
+++ b/templates/vhost/vhost_location_directory.erb
@@ -18,6 +18,7 @@
 <% end -%><% else -%>
 <% Array(value).each do |sub| -%>
     <%= key %> <%= sub %>;
+<% end %>
 <% end -%>
 <% end -%><% end -%>
 <% if defined? @www_root -%>
