--- a/templates/vhost/vhost_location_proxy.erb
+++ b/templates/vhost/vhost_location_proxy.erb
@@ -47,6 +47,7 @@
 <% Array(value).each do |sub| -%>
     <%= key %> <%= sub %>;
 <% end %>
+<% end -%>
 <% end -%><% end -%>
 <% if @location_custom_cfg_append -%><% @location_custom_cfg_append.each do |value| -%>
     <%= value %>;
