--- a/templates/vhost/vhost_ssl_footer.erb
+++ b/templates/vhost/vhost_ssl_footer.erb
@@ -15,6 +15,7 @@ include <%= file %>;
 <% end -%>
 <% end -%><% end -%>
 <% if @vhost_cfg_ssl_append -%><% @vhost_cfg_ssl_append.sort_by{ |k, v| k.to_s == 'allow' ? '' : k.to_s }.each do |key,value| -%>
+<% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
 <% Array(subkey).each do |asubkey| -%>
 <% Array(subvalue).each do |asubvalue| -%>
   <%= key %> <%= asubkey %> <%= asubvalue %>;
