--- a/templates/vhost/vhost_footer.erb
+++ b/templates/vhost/vhost_footer.erb
@@ -9,12 +9,12 @@ include <%= file %>;
 <% Array(subkey).each do |asubkey| -%>
 <% Array(subvalue).each do |asubvalue| -%>
   <%= key %> <%= asubkey %> <%= asubvalue %>;
-<% end %>
-<% end %>
+<% end -%>
+<% end -%>
 <% end -%><% else -%>
 <% Array(value).each do |sub| -%>
   <%= key %> <%= sub %>;
-<% end %>
+<% end -%>
 <% end -%>
 <% end -%><% end -%>
 }
@@ -24,4 +24,4 @@ server {
   server_name           www.<%= @name.gsub(/^www\./, '') %>;
   rewrite               ^ http://<%= @name.gsub(/^www\./, '') %>$uri permanent;
 }
-<% end %>
+<% end -%>
