--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -22,12 +22,12 @@ server {
 <% Array(subkey).each do |asubkey| -%>
 <% Array(subvalue).each do |asubvalue| -%>
   <%= key %> <%= asubkey %> <%= asubvalue %>;
-<% end %>
-<% end %>
+<% end -%>
+<% end -%>
 <% end -%><% else -%>
 <% Array(value).each do |sub| -%>
   <%= key %> <%= sub %>;
-<% end %>
+<% end -%>
 <% end -%>
 <% end -%><% end -%>
 <% if @root -%>
