--- a/templates/vhost/vhost_location_alias.erb
+++ b/templates/vhost/vhost_location_alias.erb
@@ -7,12 +7,12 @@
 <% Array(subkey).each do |asubkey| -%>
 <% Array(subvalue).each do |asubvalue| -%>
     <%= key %> <%= asubkey %> <%= asubvalue %>;
-<% end %>
-<% end %>
+<% end -%>
+<% end -%>
 <% end -%><% else -%>
 <% Array(value).each do |sub| -%>
     <%= key %> <%= sub %>;
-<% end %>
+<% end -%>
 <% end -%>
 <% end -%><% end -%>
     alias      <%= @location_alias %>;
@@ -21,12 +21,12 @@
 <% Array(subkey).each do |asubkey| -%>
 <% Array(subvalue).each do |asubvalue| -%>
     <%= key %> <%= asubkey %> <%= asubvalue %>;
-<% end %>
-<% end %>
+<% end -%>
+<% end -%>
 <% end -%><% else -%>
 <% Array(value).each do |sub| -%>
     <%= key %> <%= sub %>;
-<% end %>
+<% end -%>
 <% end -%>
 <% end -%><% end -%>
 <% if @location_custom_cfg_append -%><% @location_custom_cfg_append.each do |value| -%>
