--- a/templates/vhost/vhost_ssl_footer.erb
+++ b/templates/vhost/vhost_ssl_footer.erb
@@ -6,12 +6,12 @@ include <%= file %>;
 <% Array(subkey).each do |asubkey| -%>
 <% Array(subvalue).each do |asubvalue| -%>
   <%= key %> <%= asubkey %> <%= asubvalue %>;
-<% end %>
-<% end %>
+<% end -%>
+<% end -%>
 <% end -%><% else -%>
 <% Array(value).each do |sub| -%>
   <%= key %> <%= sub %>;
-<% end %>
+<% end -%>
 <% end -%>
 <% end -%><% end -%>
 <% if @vhost_cfg_ssl_append -%><% @vhost_cfg_ssl_append.sort_by{ |k, v| k.to_s == 'allow' ? '' : k.to_s }.each do |key,value| -%>
@@ -19,12 +19,12 @@ include <%= file %>;
 <% Array(subkey).each do |asubkey| -%>
 <% Array(subvalue).each do |asubvalue| -%>
   <%= key %> <%= asubkey %> <%= asubvalue %>;
-<% end %>
-<% end %>
+<% end -%>
+<% end -%>
 <% end -%><% else -%>
 <% Array(value).each do |sub| -%>
   <%= key %> <%= sub %>;
-<% end %>
+<% end -%>
 <% end -%>
 <% end -%><% end -%>
 }
