--- a/templates/vhost/vhost_ssl_header.erb
+++ b/templates/vhost/vhost_ssl_header.erb
@@ -53,12 +53,12 @@ server {
 <% Array(subkey).each do |asubkey| -%>
 <% Array(subvalue).each do |asubvalue| -%>
   <%= key %> <%= asubkey %> <%= asubvalue %>;
-<% end %>
-<% end %>
+<% end -%>
+<% end -%>
 <% end -%><% else -%>
 <% Array(value).each do |sub| -%>
   <%= key %> <%= sub %>;
-<% end %>
+<% end -%>
 <% end -%>
 <% end -%><% end -%>
 <% if @vhost_cfg_ssl_prepend -%><% @vhost_cfg_ssl_prepend.sort_by{ |k, v| k.to_s == 'allow' ? '' : k.to_s }.each do |key,value| -%>
@@ -66,12 +66,12 @@ server {
 <% Array(subkey).each do |asubkey| -%>
 <% Array(subvalue).each do |asubvalue| -%>
   <%= key %> <%= asubkey %> <%= asubvalue %>;
-<% end %>
-<% end %>
+<% end -%>
+<% end -%>
 <% end -%><% else -%>
 <% Array(value).each do |sub| -%>
   <%= key %> <%= sub %>;
-<% end %>
+<% end -%>
 <% end -%>
 <% end -%><% end -%>
 <% if @root -%>
