--- a/templates/vhost/vhost_location_directory.erb
+++ b/templates/vhost/vhost_location_directory.erb
@@ -55,7 +55,17 @@
 <% end -%>
 <% end -%>
 <% end -%><% end -%>
-<% if @location_custom_cfg_append -%><% @location_custom_cfg_append.each do |value| -%>
-    <%= value %>
+<% if @location_custom_cfg_append -%><% @location_custom_cfg_append.each do |key,value| -%>
+<% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
+<% Array(subkey).each do |asubkey| -%>
+<% Array(subvalue).each do |asubvalue| -%>
+    <%= key %> <%= asubkey %> <%= asubvalue %>;
+<% end -%>
+<% end -%>
+<% end -%><% else -%>
+<% Array(value).each do |sub| -%>
+    <%= key %> <%= sub %>;
+<% end -%>
+<% end -%>
 <% end -%><% end -%>
   }
