--- a/templates/vhost/vhost_location_proxy.erb
+++ b/templates/vhost/vhost_location_proxy.erb
@@ -5,8 +5,18 @@
 <% if @location_deny -%><% @location_deny.each do |deny_rule| -%>
     deny <%= deny_rule %>;
 <% end -%><% end -%>
-<% if @location_custom_cfg_prepend -%><% @location_custom_cfg_prepend.each do |value| -%>
-    <%= value %>;
+<% if @location_custom_cfg_prepend -%><% @location_custom_cfg_prepend.each do |key,value| -%>
+<% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
+<% Array(subkey).each do |asubkey| -%>
+<% Array(subvalue).each do |asubvalue| -%>
+    <%= key %> <%= asubkey %> <%= asubvalue %>;
+<% end -%>
+<% end -%>
+<% end -%><% else -%>
+<% Array(value).each do |sub| -%>
+    <%= key %> <%= sub %>;
+<% end -%>
+<% end -%>
 <% end -%><% end -%>
 <% if @location_cfg_prepend -%><% @location_cfg_prepend.each do |key,value| -%>
 <% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
@@ -49,8 +59,18 @@
 <% end -%>
 <% end -%>
 <% end -%><% end -%>
-<% if @location_custom_cfg_append -%><% @location_custom_cfg_append.each do |value| -%>
-    <%= value %>;
+<% if @location_custom_cfg_append -%><% @location_custom_cfg_append.each do |key,value| -%>
+<% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
+<% Array(subkey).each do |asubkey| -%>
+<% Array(subvalue).each do |asubvalue| -%>
+    <%= key %> <%= asubkey %> <%= asubvalue %>;
+<% end -%>
+<% end -%>
+<% end -%><% else -%>
+<% Array(value).each do |sub| -%>
+    <%= key %> <%= sub %>;
+<% end -%>
+<% end -%>
 <% end -%><% end -%>
 
   }
