--- a/templates/vhost/vhost_location_empty.erb
+++ b/templates/vhost/vhost_location_empty.erb
@@ -1,14 +1,12 @@
   location <%= @location %> {
 <% if @location_custom_cfg -%><% @location_custom_cfg.sort_by {|k,v| k}.each do |key,value| -%>
 <% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
-<% Array(subkey).each do |asubkey| -%>
 <% Array(subvalue).each do |asubvalue| -%>
-    <%= key %> <%= asubkey %> <%= asubvalue %>;
-<% end -%>
+    <%= key %> <%= subkey %> <%= asubvalue %>;
 <% end -%>
 <% end -%><% else -%>
-<% Array(value).each do |sub| -%>
-    <%= key %> <%= sub %>;
+<% Array(value).each do |asubvalue| -%>
+    <%= key %> <%= asubvalue %>;
 <% end -%>
 <% end -%>
 <% end -%><% end -%>
