--- a/templates/vhost/vhost_location_proxy.erb
+++ b/templates/vhost/vhost_location_proxy.erb
@@ -7,27 +7,23 @@
 <% end -%><% end -%>
 <% if @location_custom_cfg_prepend -%><% @location_custom_cfg_prepend.each do |key,value| -%>
 <% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
-<% Array(subkey).each do |asubkey| -%>
 <% Array(subvalue).each do |asubvalue| -%>
-    <%= key %> <%= asubkey %> <%= asubvalue %>;
-<% end -%>
+  <%= key %> <%= subkey %> <%= asubvalue %>;
 <% end -%>
 <% end -%><% else -%>
-<% Array(value).each do |sub| -%>
-    <%= key %> <%= sub %>;
+<% Array(value).each do |asubvalue| -%>
+    <%= key %> <%= asubvalue %>;
 <% end -%>
 <% end -%>
 <% end -%><% end -%>
-<% if @location_cfg_prepend -%><% @location_cfg_prepend.each do |key,value| -%>
+<% if @location_cfg_prepend -%><% @location_cfg_prepend.sort_by {|k,v| k}.each do |key,value| -%>
 <% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
-<% Array(subkey).each do |asubkey| -%>
 <% Array(subvalue).each do |asubvalue| -%>
-    <%= key %> <%= asubkey %> <%= asubvalue %>;
-<% end -%>
+  <%= key %> <%=subkey %> <%= asubvalue %>;
 <% end -%>
 <% end -%><% else -%>
-<% Array(value).each do |sub| -%>
-    <%= key %> <%= sub %>;
+<% Array(value).each do |asubvalue| -%>
+    <%= key %> <%= asubvalue %>;
 <% end -%>
 <% end -%>
 <% end -%><% end -%>
@@ -48,30 +44,24 @@
 <% end -%>
 <% if @location_cfg_append -%><% @location_cfg_append.sort_by {|k,v| k}.each do |key,value| -%>
 <% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
-<% Array(subkey).each do |asubkey| -%>
 <% Array(subvalue).each do |asubvalue| -%>
-    <%= key %> <%= asubkey %> <%= asubvalue %>;
-<% end -%>
+  <%= key %> <%= subkey %> <%= asubvalue %>;
 <% end -%>
 <% end -%><% else -%>
-<% Array(value).each do |sub| -%>
-    <%= key %> <%= sub %>;
+<% Array(value).each do |asubvalue| -%>
+    <%= key %> <%= asubvalue %>;
 <% end -%>
 <% end -%>
 <% end -%><% end -%>
 <% if @location_custom_cfg_append -%><% @location_custom_cfg_append.each do |key,value| -%>
 <% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
-<% Array(subkey).each do |asubkey| -%>
 <% Array(subvalue).each do |asubvalue| -%>
-    <%= key %> <%= asubkey %> <%= asubvalue %>;
-<% end -%>
+  <%= key %> <%= subkey %> <%= asubvalue %>;
 <% end -%>
 <% end -%><% else -%>
-<% Array(value).each do |sub| -%>
-    <%= key %> <%= sub %>;
+<% Array(value).each do |asubvalue| -%>
+    <%= key %> <%= asubvalue %>;
 <% end -%>
 <% end -%>
 <% end -%><% end -%>
-
   }
-
