--- a/templates/vhost/vhost_ssl_header.erb
+++ b/templates/vhost/vhost_ssl_header.erb
@@ -50,27 +50,23 @@ server {
   
 <% if @vhost_cfg_prepend -%><% @vhost_cfg_prepend.sort_by{ |k, v| k.to_s == 'allow' ? '' : k.to_s }.each do |key,value| -%>
 <% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
-<% Array(subkey).each do |asubkey| -%>
 <% Array(subvalue).each do |asubvalue| -%>
-  <%= key %> <%= asubkey %> <%= asubvalue %>;
-<% end -%>
+  <%= key %> <%= subkey %> <%= asubvalue %>;
 <% end -%>
 <% end -%><% else -%>
-<% Array(value).each do |sub| -%>
-  <%= key %> <%= sub %>;
+<% Array(value).each do |asubvalue| -%>
+  <%= key %> <%= asubvalue %>;
 <% end -%>
 <% end -%>
 <% end -%><% end -%>
 <% if @vhost_cfg_ssl_prepend -%><% @vhost_cfg_ssl_prepend.sort_by{ |k, v| k.to_s == 'allow' ? '' : k.to_s }.each do |key,value| -%>
 <% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
-<% Array(subkey).each do |asubkey| -%>
 <% Array(subvalue).each do |asubvalue| -%>
-  <%= key %> <%= asubkey %> <%= asubvalue %>;
-<% end -%>
+  <%= key %> <%= subkey %> <%= asubvalue %>;
 <% end -%>
 <% end -%><% else -%>
-<% Array(value).each do |sub| -%>
-  <%= key %> <%= sub %>;
+<% Array(value).each do |asubvalue| -%>
+  <%= key %> <%= asubvalue %>;
 <% end -%>
 <% end -%>
 <% end -%><% end -%>
