Add option proxy_connect_timeout Bug fix

--- a/templates/vhost/vhost_location_directory.erb
+++ b/templates/vhost/vhost_location_directory.erb
@@ -11,11 +11,11 @@
 <% if @location_cfg_prepend -%><% @location_cfg_prepend.sort_by {|k,v| k}.each do |key,value| -%>
 <% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
 <% Array(subvalue).each do |asubvalue| -%>
-    <%= key %> <%= subkey %> <%= asubvalue %>;
+    <%= key %> <%= subkey %> <%= asubvalue %>
 <% end -%>
 <% end -%><% else -%>
 <% Array(value).each do |asubvalue| -%>
-    <%= key %> <%= asubvalue %>;
+    <%= key %> <%= asubvalue %>
 <% end -%>
 <% end -%>
 <% end -%><% end -%>
@@ -54,11 +54,11 @@
 <% if @location_custom_cfg_append -%><% @location_custom_cfg_append.each do |key,value| -%>
 <% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
 <% Array(subvalue).each do |asubvalue| -%>
-    <%= key %> <%= subkey %> <%= asubvalue %>;
+    <%= key %> <%= subkey %> <%= asubvalue %>
 <% end -%>
 <% end -%><% else -%>
 <% Array(value).each do |asubvalue| -%>
-    <%= key %> <%= asubvalue %>;
+    <%= key %> <%= asubvalue %>
 <% end -%>
 <% end -%>
 <% end -%><% end -%>
