--- a/templates/vhost/vhost_location_stub_status.erb
+++ b/templates/vhost/vhost_location_stub_status.erb
@@ -2,11 +2,11 @@
 <% if @location_custom_cfg_prepend -%><% @location_custom_cfg_prepend.each do |key,value| -%>
 <% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
 <% Array(subvalue).each do |asubvalue| -%>
-    <%= key %> <%= subkey %> <%= asubvalue %>;
+    <%= key %> <%= subkey %> <%= asubvalue %>
 <% end -%>
 <% end -%><% else -%>
 <% Array(value).each do |asubvalue| -%>
-    <%= key %> <%= asubvalue %>;
+    <%= key %> <%= asubvalue %>
 <% end -%>
 <% end -%>
 <% end -%><% end -%>
@@ -36,11 +36,11 @@
 <% if @location_custom_cfg_append -%><% @location_custom_cfg_append.each do |key,value| -%>
 <% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
 <% Array(subvalue).each do |asubvalue| -%>
-    <%= key %> <%= subkey %> <%= asubvalue %>;
+    <%= key %> <%= subkey %> <%= asubvalue %>
 <% end -%>
 <% end -%><% else -%>
 <% Array(value).each do |asubvalue| -%>
-    <%= key %> <%= asubvalue %>;
+    <%= key %> <%= asubvalue %>
 <% end -%>
 <% end -%>
 <% end -%><% end -%>
