--- a/templates/conf.d/proxy.conf.erb
+++ b/templates/conf.d/proxy.conf.erb
@@ -9,3 +9,4 @@ proxy_buffer_size       <%= @proxy_buffer_size %>;
 proxy_http_version      <%= @proxy_http_version %>;
 <% @proxy_set_header.each do |header| %>
 proxy_set_header        <%= header %>;<% end %>
+proxy_headers_hash_bucket_size <%= @proxy_headers_hash_bucket_size %>;
