Add Archlinux support
This commit adds Archlinux support. This needs changes in nginx.conf.erb
template and manifests to support pid value set to `false` (this skips it from
nginx.conf). This is due to `-pid /run/nginx.pid` being hardcoded to Archlinux
template. If you specify pid additionally in `nginx.conf` then nginx fails to
start.

--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -3,7 +3,7 @@ worker_processes <%= @worker_processes %>;
 worker_rlimit_nofile <%= @worker_rlimit_nofile %>;
 
 error_log  <%= @nginx_error_log %>;
-pid        <%= scope.lookupvar('nginx::params::nx_pid')%>;
+<% if scope.lookupvar('nginx::params::nx_pid') != false %>pid        <%= scope.lookupvar('nginx::params::nx_pid')%>;<% end -%>
 
 events {
   worker_connections <%= @worker_connections -%>;
