Add client_max_body_size to ssl vhost

--- a/templates/vhost/vhost_ssl_header.erb
+++ b/templates/vhost/vhost_ssl_header.erb
@@ -41,6 +41,9 @@ server {
 <% if defined? @auth_basic_user_file -%>
   auth_basic_user_file      "<%= @auth_basic_user_file %>";
 <% end -%>
+<% if defined? @client_max_body_size -%>
+  client_max_body_size <%= @client_max_body_size %>;
+<% end -%>
 <% if @index_files.count > 0 -%>
     index <% Array(@index_files).each do |i| %> <%= i %><% end %>;
 <% end -%>
