Tidied up nginx templates and output

--- a/templates/conf.d/proxy.conf.erb
+++ b/templates/conf.d/proxy.conf.erb
@@ -1,3 +1,4 @@
+# This file is managed by Puppet
 proxy_redirect          <%= @proxy_redirect %>;
 client_max_body_size    <%= @client_max_body_size %>;
 client_body_buffer_size <%= @client_body_buffer_size %>;
