--- a/templates/conf.d/map.erb
+++ b/templates/conf.d/map.erb
@@ -1,13 +1,13 @@
 map <%= @string %> $<%= @name %> {
-<% if @hostnames -%>
+<%- if @hostnames -%>
   hostnames;
-<% end -%>
-<% if @default -%>
+<%- end -%>
+<%- if @default -%>
   default <%= @default %>;
-<% end -%>
-<% if @mappings -%>
+<%- end -%>
+<%- if @mappings -%>
   <%- @mappings.sort_by{|k,v| k}.each do |key,value| -%>
   <%= key %> <%= value %>;
   <%- end -%>
-<% end -%>
+<%- end -%>
 }
