--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -1,63 +1,70 @@
+# This file is managed by Puppet
 server {
   listen                <%= @listen_ip %>:<%= @listen_port %><% if @listen_options %> <%= @listen_options %><% end %>;
-<% # check to see if ipv6 support exists in the kernel before applying %>
-<% if @ipv6_enable && (defined? @ipaddress6) %>
+<%- # check to see if ipv6 support exists in the kernel before applying -%>
+<%- if @ipv6_enable && (defined? @ipaddress6) -%>
   listen [<%= @ipv6_listen_ip %>]:<%= @ipv6_listen_port %> <% if @ipv6_listen_options %><%= @ipv6_listen_options %><% end %>;
-<% end %>
+<%- end -%>
   server_name           <%= @rewrite_www_to_non_www ? @name.gsub(/^www\./, '') : @server_name.join(" ") %>;
-<% if defined? @auth_basic -%>
+<%- if defined? @auth_basic -%>
   auth_basic           "<%= @auth_basic %>";
-<% end -%>
-<% if defined? @auth_basic_user_file -%>
+<%- end -%>
+<%- if defined? @auth_basic_user_file -%>
   auth_basic_user_file <%= @auth_basic_user_file %>;
-<% end -%>
-<% if defined? @client_max_body_size -%>
+<%- end -%>
+<%- if defined? @client_max_body_size -%>
   client_max_body_size <%= @client_max_body_size %>;
-<% end -%>
+<%- end -%>
 <%# make sure that allow comes before deny by forcing the allow key (if it -%>
 <%# exists) to be first in the output order.  The hash keys also need to be -%>
 <%# sorted so that the ordering is stable. -%>
-<% if @vhost_cfg_prepend -%><% @vhost_cfg_prepend.sort_by{ |k, v| k.to_s == 'allow' ? '' : k.to_s }.each do |key,value| -%>
-<% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
-<% Array(subvalue).each do |asubvalue| -%>
+<%- if @vhost_cfg_prepend -%>
+	<%- @vhost_cfg_prepend.sort_by{ |k, v| k.to_s == 'allow' ? '' : k.to_s }.each do |key,value| -%>
+		<%- if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
+			<%- Array(subvalue).each do |asubvalue| -%>
   <%= key %> <%= subkey %> <%= asubvalue %>;
-<% end -%>
-<% end -%><% else -%>
-<% Array(value).each do |asubvalue| -%>
+			<%- end -%>
+		<%- end -%>
+		<%- else -%>
+			<%- Array(value).each do |asubvalue| -%>		
   <%= key %> <%= asubvalue %>;
-<% end -%>
-<% end -%>
-<% end -%><% end -%>
-<% if @root -%>
+			<%- end -%>
+		<%- end -%>
+	<%- end -%>
+<%- end -%>
+<%- if @root -%>
   root <%= @root %>;
-<% end -%>
-<% if @passenger_cgi_param -%><% @passenger_cgi_param.keys.sort.each do |key| -%>
+<%- end -%>
+<%- if @passenger_cgi_param -%>
+	<%- @passenger_cgi_param.keys.sort.each do |key| -%>
   passenger_set_cgi_param  <%= key %> <%= @passenger_cgi_param[key] %>;
-<% end -%><% end -%>
-<% if @resolver.count > 0 -%>
+	<%- end -%>
+<%- end -%>
+<%- if @resolver.count > 0 -%>
   resolver                  <% Array(@resolver).each do |r| %> <%= r %><% end %>;
-<% end -%>
-<% @proxy_set_header.each do |header| -%>
+<%- end -%>
+<%- @proxy_set_header.each do |header| -%>
   proxy_set_header        <%= header %>;
-<% end -%>
-<% if @add_header -%><% @add_header.each do |key,value| -%>
+<%- end -%>
+<%- if @add_header -%>
+	<%- @add_header.each do |key,value| -%>
   add_header              <%= key %> <%= value %>;
-<% end -%><% end -%>
-<% if @rewrite_to_https -%>
+	<%- end -%>
+<%- end -%>
+<%- if @rewrite_to_https -%>
   if ($ssl_protocol = "") {
        return 301 https://$host$request_uri;
   }
-<% end -%>
-<% if @index_files.count > 0 -%>
+<%- end -%>
+<%- if @index_files.count > 0 -%>
     index <% Array(@index_files).each do |i| %> <%= i %><% end %>;
-<% end -%>
-<% if defined? @log_by_lua -%>
+<%- end -%>
+<%- if defined? @log_by_lua -%>
   log_by_lua '<%= @log_by_lua %>';
-<% end -%>
-<% if defined? @log_by_lua_file -%>
+<%- end -%>
+<%- if defined? @log_by_lua_file -%>
   log_by_lua_file "<%= @log_by_lua_file %>";
-<% end -%>
-
+<%- end -%>
 
 
   access_log            <%= @access_log_real %>;
