allow setting gzip_types to vhosts

--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -20,6 +20,9 @@ server {
 <% if defined? @client_max_body_size -%>
   client_max_body_size <%= @client_max_body_size %>;
 <% end -%>
+<% if defined? @gzip_types -%>
+  gzip_types <%= @gzip_types %>;
+<% end -%>
 <%# make sure that allow comes before deny by forcing the allow key (if it -%>
 <%# exists) to be first in the output order.  The hash keys also need to be -%>
 <%# sorted so that the ordering is stable. -%>
